--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>废柴工作室</title>
   <link rel="icon" href="logo.png" />
+  <script type="text/javascript" src="/live2dw/lib/L2Dwidget.min.js"></script>
 </head>
 <body>
 <div id="app"></div>
